# GalaxyZ_cpps

./: CMakeLists.txt  config.json  main.cpp  xinxing.json
include/: MQTTAsync.h  MQTTClient.h  MQTTClientPersistence.h  MQTTProperties.h  MQTTReasonCodes.h  MQTTSubscribeOpts.h
include/djiosdk/: dji_ack.hpp  dji_aes.hpp  dji_broadcast.hpp  dji_camera.hpp  dji_camera_manager.hpp  dji_camera_module.hpp  dji_circular_buffer.hpp  dji_command.hpp  dji_control.hpp  dji_crc.hpp  dji_error.hpp  dji_flight_actions_module.hpp  dji_flight_assistant_module.hpp  dji_flight_controller.hpp  dji_flight_link.hpp  dji_gimbal.hpp  dji_hard_driver.hpp  dji_hardware_sync.hpp  dji_hotpoint.hpp  dji_log.hpp  dji_memory.hpp  dji_mfio.hpp  dji_mission_base.hpp  dji_mission_manager.hpp  dji_mission_type.hpp  dji_mobile_communication.hpp  dji_mobile_device.hpp  dji_open_protocol.hpp  dji_payload_base.hpp  dji_payload_device.hpp  dji_payload_link.hpp  dji_platform_manager.hpp  dji_protocol_base.hpp  dji_psdk_manager.hpp  dji_psdk_module.hpp  dji_singleton.hpp  dji_status.hpp  dji_subscription.hpp  dji_telemetry.hpp  dji_thread_manager.hpp  (+9 more)
include/mqtt/: async_client.h  buffer_ref.h  buffer_view.h  callback.h  client.h  connect_options.h  delivery_token.h  disconnect_options.h  exception.h  iaction_listener.h  iasync_client.h  iclient_persistence.h  message.h  properties.h  response_options.h  server_response.h  ssl_options.h  string_collection.h  subscribe_options.h  thread_queue.h  token.h  topic.h  types.h  will_options.h
include/rapidjson/: document.h  rapidjson.h  reader.h
src/: Config.cpp  Config.h  Status.cpp  Status.h
src/Base/: File2Json.cpp  File2Json.h  Point.cpp  Point.h  PointGroup.cpp  PointGroup.h  Semaphore .h
src/Command/: Commands.cpp  (+3 more)
(+35 files in other folders)
